# lite-clojure

./: Cargo.toml  README.md
eval-app/: .gitignore  Cargo.toml
eval-app/src/: main.rs
lite-clj/: Cargo.toml  LICENSE
lite-clj/src/: lib.rs
lite-clj/src/ast/: ast.rs  cexpr.rs  cst.rs  errors.rs  expr.rs  lex_string.rs  mod.rs  parse.rs  utils.rs  value.rs
lite-clj/src/compiler/: compiler.rs  mod.rs  scoped_map.rs
lite-clj/src/vm/: call_frame.rs  code_chunk.rs  errors.rs  getable.rs  instruction.rs  mod.rs  opcodes.rs  stack.rs  thread.rs  value.rs  vm.rs
lite-clj/src/vm/gc/: gc.rs  mod.rs
lite-clj/tests/: vm.rs
lite-clj/tests/clj/: test.clj
lite-clojure-compiler/: Cargo.toml
lite-clojure-compiler/src/: compiler.rs  scoped_map.rs
lite-clojure-eval/: Cargo.toml  Q.md  README.md
lite-clojure-eval/src/: buildin_fn.rs  core.clj  error.rs  eval_rt.rs  exec_context.rs  lib.rs  module.rs  sym_scope.rs  value.rs  variable.rs
lite-clojure-eval/tests/: count_add.clj  invoke.clj  invoke2.clj  loop.clj  main.clj  map.clj  math.clj  record.clj  test.rs
lite-clojure-eval/tests/string/: tools.clj
lite-clojure-frp/: Cargo.toml  README.md
lite-clojure-frp/src/: errors.rs  fns.rs  lib.rs
lite-clojure-frp/tests/: 1.clj
lite-clojure-parser/: Cargo.toml
lite-clojure-parser/src/: ast.rs  cexpr.rs  cst.rs  errors.rs  expr.rs  lib.rs  meta.rs  value.rs
lite-clojure-parser/tests/: sprite-mask.material.clj  test.clj  test2.clj
lite-clojure-vm/: Cargo.toml
lite-clojure-vm/src/: stack.rs  thread.rs  value.rs  vm.rs
lite-clojure-vm/src/gc/: gc.rs  mod.rs
(+4 files in other folders)
