[package]
name = "lite-clojure-compiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lite-clojure-parser = {path = "../lite-clojure-parser"} 
lite-clojure-vm = {path = "../lite-clojure-vm"} 
fnv = "1.0.7"